# Convertify_App

./: .gitignore  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: convert.rs  lib.rs  logger.rs  main.rs  presets.rs  probe.rs
