[package]
name = "convertify"
version = "0.2.0"
description = "A powerful FFmpeg-based media converter"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "convertify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ffmpeg-sidecar = "2"
tokio = { version = "1", features = ["full"] }
regex = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

